DiagnosticsApp/Kubernetes/signin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signin-api
  template:
    metadata:
      labels:
        app: signin-api
    spec:
      containers:
      - name: signin-api
        image: moimhossain/signin-app:beta
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /hello
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /hello
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
