DiagnosticsApp/Kubernetes/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: casper-api
spec:
  type: ClusterIP
  selector:
    app: casper-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
