DiagnosticsApp/Kubernetes/signin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signin-api
spec:
  selector:
    app: signin-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
