DiagnosticsApp/Kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-nginx
    meta.helm.sh/release-namespace: ingress-nginx
  creationTimestamp: "2025-09-11T05:15:21Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.13.2
    helm.sh/chart: ingress-nginx-4.13.2
  name: ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "3558"
  uid: 3532c959-36d7-43a4-9a22-60e391427c1a
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.0.238.27
  clusterIPs:
  - 10.0.238.27
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 108.143.80.106
  ports:
  - appProtocol: http
    name: http
    nodePort: 31220
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 31110
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 20.67.14.31
      ipMode: VIP
