DiagnosticsApp/Kubernetes/test-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: casper-api-direct-lb
spec:
  type: LoadBalancer
  selector:
    app: casper-api
  ports:
  - port: 80
    targetPort: 8080
